traefik/demo-ingress-route.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: demo
  namespace: demo
spec:
  entryPoints:
  - web
  routes:
    - match: Host(`demo.test.com`)
      kind: Rule
      services:
        - name: demo-service
          port: 80
