traefik/traefik-dashboard-ingress-route-with-auth.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.yourdomain.com`)
      kind: Rule
      middlewares:
        - name: traefik-dashboard-basicauth
          namespace: traefik
        - name: default-headers
          namespace: default
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    certResolver: le
